<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Privacy">

    <android.support.v7.widget.CardView
        android:id="@+id/cv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">



            <ImageView
                android:id="@+id/arrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:onClick="goBack"
                android:src="@drawable/icon_back" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_below="@id/cv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Privacy Policy"
                android:fontFamily="sans-serif-light"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_1"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="What information we collect about you?"
                android:textColor="@color/colorPrimary"
                android:fontFamily="sans-serif-light"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_2"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="How will we use the information we collect from you?"
                android:textColor="@color/colorPrimary"
                android:fontFamily="sans-serif-light"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"
                android:layout_marginBottom="16dp"
                android:text="@string/privacy_3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:text="Access to your information"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/privacy_4"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>